--- a/OOPLast/application.yaml
+++ b/OOPLast/application.yaml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/task_db
-    username: postgres
-    password: 1234
+    url: jdbc:postgresql://localhost:5432/oop
+    username: fedaoop
+    password: 2006
     driver-class-name: org.postgresql.Driver
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
